# tracking_bugs

./: pyproject.toml  toDo.md
authentication/: forms.py  urls.py  views.py
authentication/templates/: index.html
bug_tracker_users/: admin.py  apps.py  models.py  urls.py
bug_tracker_users/migrations/: 0001_initial.py  0002_bugtrackinguser_bio.py
config/: settings.py  urls.py
projects/: forms.py  models.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_project_team.py  0003_project_tickets.py
projects/templates/: project_page.html
teams/: forms.py  models.py  urls.py  views.py
teams/migrations/: 0001_initial.py  0002_auto_20210915_0916.py
teams/templates/: edit_team_details.html  team_page.html
tickets/: forms.py  models.py  urls.py  views.py
tickets/migrations/: 0001_initial.py  0002_auto_20210915_0240.py  0003_auto_20210915_0242.py  0004_auto_20210915_0253.py  0005_alter_ticket_date_created.py  0006_alter_ticket_date_created.py  0007_alter_ticket_date_created.py  0008_alter_ticket_date_created.py  0009_alter_ticket_date_created.py
tickets/templates/: ticket.html
