[tool.poetry]
name = "bug_tracker"
version = "0.1.0"
description = "Application to track internal bugs for companies"
authors = ["Joey Brown"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
